--- a/css/main.css
+++ b/css/main.css
@@ -17,10 +17,10 @@ body{
 
 .content {
     background: rgb(22 22 22 / 30%);
-    padding: 4rem 8em;
+    padding: 2rem;
     box-shadow: 5px 5px 10px 0px rgb(22 22 22 / 70%);
     border-radius: 5px;
-    height: 60vh;
+    height: auto;
     display: flex;
     flex-direction: column;
     align-items: center;
